# aoc2020

./: .gitignore  Cargo.toml  README.md  compare.sh  stack.yaml
haskell/: aoc2020.cabal  day01.hs  hie.yaml
haskell/src/: Day01.hs  Day02.hs  Main.hs
python/: day01.py  setup.cfg
python/src/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py
rust/: Cargo.toml  main.rs
rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
scratch/: old.py  pyproject.toml  run.py
