[package]
name = "aoc2020"
version = "0.1.0"
authors = ["azuline <azuline@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2020"
path = "src/main.rs"

[dependencies]
itertools = "0.9"
regex = "1"
lazy_static = "1.4.0"
